--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Final_Project",
   "main": "app.js",
   "scripts": {
-    "start": "tsc && node ./dist/app.js",
-    "dev": "nodemon ./backend/src/app.ts",
-    "test": "tsc && jest --detectOpenHandles --forceExit --runInBand",
-    "testAuth": "tsc && jest --detectOpenHandles --forceExit auth.test.ts",
-    "testPost": "tsc && jest --detectOpenHandles --forceExit posts.test.ts",
-    "testComment": "tsc && jest --detectOpenHandles --forceExit comments.test.ts",
+    "start": "copy .env_dev .env && tsc && node ./dist/app.js",
+    "dev": "copy .env_dev .env && nodemon ./backend/src/app.ts",
+    "test": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit --runInBand",
+    "testAuth": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit auth.test.ts",
+    "testPost": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit posts.test.ts",
+    "testComment": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit comments.test.ts",
+    "testFile": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit files.test.ts",
     "lint": "eslint . --ext .ts"
   },
   "author": "Hila & Elrom",
@@ -24,6 +25,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.11.0",
+    "multer": "^1.4.5-lts.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
@@ -32,6 +34,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.8",
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
