--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "Final_Project",
   "main": "app.js",
   "scripts": {
-  "start": "copy .env_dev .env && tsc && node ./dist/app.js",
-  "dev": "copy .env_dev .env && nodemon --config nodemon.json",
-  "test": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit",
-  "test:watch": "jest --watch",
-  "testAuth": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit auth.test.ts",
-  "testPost": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit posts.test.ts",
-  "testComment": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit comments.test.ts",
-  "testUpload": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit uploads.test.ts",
-  "lint": "eslint . --ext .ts"
-},
+    "start": "copy .env_dev .env && tsc && node ./dist/app.js",
+    "dev": "copy .env_dev .env && nodemon --config nodemon.json",
+    "test": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit",
+    "test:watch": "jest --watch",
+    "testAuth": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit auth.test.ts",
+    "testPost": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit posts.test.ts",
+    "testComment": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit comments.test.ts",
+    "testUpload": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit uploads.test.ts",
+    "lint": "eslint . --ext .ts"
+  },
   "author": "Hila & Elrom",
   "license": "ISC",
   "dependencies": {
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.11.0",
     "multer": "^1.4.5-lts.1",
