--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start": "copy .env_dev .env && tsc && node ./dist/app.js",
-    "dev": "copy .env_dev .env && nodemon --config nodemon.json",
+    "dev": "copy .env_dev .env && nodemon ./backend/src/app.ts",
     "test": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit",
-    "test:watch": "jest --watch",
+    "test:watch": "jest --watchAll=false",
     "testAuth": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit auth.test.ts",
     "testPost": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit posts.test.ts",
     "testComment": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit comments.test.ts",
