--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "Final_Project",
   "main": "app.js",
   "scripts": {
-    "start": "copy .env_dev .env && tsc && node ./dist/app.js",
-    "dev": "copy .env_dev .env && nodemon ./backend/src/app.ts",
-    "test": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit --coverage",
+    "start": "cp .env_dev .env && tsc && node ./dist/app.js",
+    "prod": "cp .env_prod .env && tsc -p tsconfig_prod.json && pm2 restart ecosystem.config.js --env production",
+    "dev": "cp .env_dev .env && nodemon ./backend/src/app.ts",
+    "test": "cp .env_test .env && tsc && jest --detectOpenHandles --forceExit --coverage",
     "test:watch": "jest --watchAll=false",
-    "testServer": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit server.test.ts",
-    "testAuth": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit auth.test.ts",
-    "testUser": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit user.test.ts",
-    "testPost": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit posts.test.ts",
-    "testComment": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit comments.test.ts",
-    "testUpload": "copy .env_test .env && tsc && jest --detectOpenHandles --forceExit uploads.test.ts",
+    "testServer": "cp .env_test .env && tsc && jest --detectOpenHandles --forceExit server.test.ts",
+    "testAuth": "cp .env_test .env && tsc && jest --detectOpenHandles --forceExit auth.test.ts",
+    "testUser": "cp .env_test .env && tsc && jest --detectOpenHandles --forceExit user.test.ts",
+    "testPost": "cp .env_test .env && tsc && jest --detectOpenHandles --forceExit posts.test.ts",
+    "testComment": "cp .env_test .env && tsc && jest --detectOpenHandles --forceExit comments.test.ts",
+    "testUpload": "cp .env_test .env && tsc && jest --detectOpenHandles --forceExit uploads.test.ts",
     "lint": "eslint . --ext .ts"
   },
   "author": "Hila & Elrom",
@@ -36,27 +37,27 @@
     "node-cache": "^5.1.2",
     "openai": "^4.87.3",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
-  },
-  "devDependencies": {
+    "swagger-ui-express": "^5.0.1",
     "@types/axios": "^0.14.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.8",
     "@types/node-cache": "^4.2.5",
-    "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "eslint": "^9.21.0",
+    "typescript": "^5.8.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.2", 
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.6",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "ts-node": "^10.9.2"
   }
 }
